<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.activity.MovieActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_app"
                android:textSize="@dimen/_25sp"
                android:layout_margin="@dimen/_15dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@android:color/white"/>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.1"
            android:background="@drawable/rounded_corner_shadow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_movie_title"
                style="@style/FontTitleBoldBlack16sp"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:fontFamily="@font/montserrat"
                android:gravity="start|center_vertical"
                android:paddingStart="@dimen/_10dp"
                android:paddingEnd="@dimen/_10dp"
                android:text="@string/movie_list"
                app:layout_constraintHorizontal_bias="0.0"
                app:fontFamily="@font/montserrat"
                app:layout_constraintEnd_toStartOf="@id/genre_picker"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.7"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/genre_picker"
                android:layout_width="@dimen/_0dp"
                android:layout_marginTop="@dimen/_5dp"
                android:layout_marginBottom="@dimen/_5dp"
                android:background="@drawable/border_left_only"
                android:layout_height="@dimen/_0dp"
                android:gravity="center"
                android:text="@string/genre_picker"
                android:paddingStart="@dimen/_10dp"
                android:paddingEnd="@dimen/_10dp"
                android:drawableEnd="@drawable/ic_arrow_down_black"
                app:layout_constraintTop_toTopOf="@id/tv_movie_title"
                app:layout_constraintBottom_toBottomOf="@id/tv_movie_title"
                app:layout_constraintStart_toEndOf="@id/tv_movie_title"
                app:fontFamily="@font/montserrat"
                app:layout_constraintWidth_percent="0.3"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ViewFlipper
            android:id="@+id/viewflipper"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header"
            android:layout_marginTop="@dimen/_15dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_movie"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

            <include
                android:id="@+id/error_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                layout="@layout/reusable_error_layout" />

        </ViewFlipper>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>