<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MovieDetailActivity">

    <ViewFlipper
        android:id="@+id/viewflipper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                    android:id="@+id/youtube_player_view"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_250dp"
                    app:autoPlay="false"
                    app:layout_constraintBottom_toTopOf="@id/tv_movie_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:showFullScreenButton="true" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_movie_cover"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_200dp"
                    android:layout_marginStart="@dimen/_20dp"
                    android:layout_marginEnd="@dimen/_10dp"
                    android:scaleType="fitXY"
                    app:layout_constraintBottom_toBottomOf="@id/tv_release_date"
                    app:layout_constraintEnd_toStartOf="@id/tv_movie_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/guideline"
                    app:layout_constraintVertical_weight="1"
                    app:layout_constraintWidth_percent="0.35"
                    app:srcCompat="@drawable/dummy_cover" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="411dp"
                    android:layout_marginBottom="531dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintGuide_begin="229dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/youtube_player_view" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_movie_title"
                    style="@style/MovieTitleLargeBold"
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10dp"
                    android:layout_marginEnd="@dimen/_10dp"
                    app:fontFamily="@font/montserrat"
                    app:layout_constraintBottom_toTopOf="@id/ratingbar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@id/img_movie_cover"
                    app:layout_constraintTop_toBottomOf="@id/youtube_player_view"
                    app:layout_constraintVertical_bias="0.0"
                    tools:text="My Hero Academia : Heroes Rising Super sfsfs Z" />

                <RatingBar
                    android:id="@+id/ratingbar"
                    style="@style/RatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:foregroundGravity="center_vertical"
                    android:isIndicator="true"
                    android:progressTint="@color/orange"
                    android:numStars="5"
                    android:stepSize="1"
                    app:layout_constraintBottom_toTopOf="@id/tv_release_date"
                    app:layout_constraintStart_toStartOf="@+id/tv_movie_title"
                    app:layout_constraintTop_toBottomOf="@id/tv_movie_title"
                    app:layout_constraintWidth_percent="0.6" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_rating"
                    style="@style/RatingTextMedium"
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10dp"
                    android:layout_marginEnd="@dimen/_10dp"
                    app:layout_constraintBottom_toBottomOf="@id/ratingbar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/ratingbar"
                    app:layout_constraintTop_toTopOf="@id/ratingbar"
                    app:layout_constraintWidth_percent="0.3"
                    tools:text="7.6 Rated" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_release_date"
                    style="@style/TextMedium14sp"
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10dp"
                    app:layout_constraintStart_toStartOf="@+id/ratingbar"
                    app:layout_constraintTop_toBottomOf="@id/ratingbar"
                    app:layout_constraintBottom_toBottomOf="@id/img_movie_cover"
                    tools:text="Released date : 01 Maret 2011" />

                <View
                    android:id="@+id/border_1"
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="@dimen/_25dp"
                    android:layout_marginTop="@dimen/_30dp"
                    android:background="@color/color_text_light"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_release_date" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title_summary"
                    style="@style/MovieTitleMediumBold"
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20dp"
                    android:layout_marginTop="@dimen/_30dp"
                    android:layout_marginEnd="@dimen/_20dp"
                    android:text="@string/plot_summary"
                    app:fontFamily="@font/montserrat"
                    app:layout_constraintBottom_toTopOf="@id/tv_summary_detail"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/border_1" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_summary_detail"
                    style="@style/TextDetailSmall"
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20dp"
                    android:layout_marginTop="@dimen/_10dp"
                    android:layout_marginEnd="@dimen/_20dp"
                    android:text="@string/plot_summary"
                    app:fontFamily="@font/montserrat"
                    app:layout_constraintBottom_toTopOf="@id/title_company"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title_summary" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title_company"
                    style="@style/MovieTitleMediumBold"
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20dp"
                    android:layout_marginTop="@dimen/_30dp"
                    android:layout_marginEnd="@dimen/_20dp"
                    android:text="@string/production_company"
                    app:fontFamily="@font/montserrat"
                    app:layout_constraintBottom_toTopOf="@id/tv_production_company"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_summary_detail" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_production_company"
                    style="@style/TextDetailSmall"
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20dp"
                    android:layout_marginTop="@dimen/_10dp"
                    android:layout_marginEnd="@dimen/_20dp"
                    android:text="@string/production_company"
                    app:fontFamily="@font/montserrat"
                    app:layout_constraintBottom_toTopOf="@id/border_2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title_company" />

                <View
                    android:id="@+id/border_2"
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="@dimen/_25dp"
                    android:layout_marginTop="@dimen/_50dp"
                    android:background="@color/color_text_light"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_production_company" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/border_2">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_show_review"
                        style="@style/TextAppearance.MaterialComponents.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/show_review"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintVertical_bias="0.0" />

                </RelativeLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <include
            android:id="@+id/error_layout"
            layout="@layout/reusable_error_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </ViewFlipper>

</androidx.coordinatorlayout.widget.CoordinatorLayout>